--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "node-red-contrib-stt-utils",
-  "version": "0.0.1",
-  "description": "A collection of nodes for localised audio processing",
-  "main": "lower-case.js",
+  "version": "1.0.0",
+  "description": "A collection of nodes for localised audio processing and speech to text",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": "github:IBMIXN/IoTTeddyUCL",
   "keywords": [
     "audio",
     "sst",
-    "node-red"
+    "node-red",
+	"deepspeech"
   ],
   "author": "Joshua Pimm",
   "license": "ISC",
